--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -5,12 +5,17 @@ Tooplate 2115 Marvel
 https://www.tooplate.com/view/2115-marvel
 
 */
+body{
 
+  background-color:  #0c0c0d;
+  color:  #fff;
+}
 
 @import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,700");
 body {
   font-family: "Maven Pro", sans-serif;
   padding-top: 70px;
+
 }
 
 .full-screen {
@@ -18,7 +23,8 @@ body {
 }
 
 .small-text {
-  color: #5b5b5b;
+  color:  #fff;
+
   font-size: 14px;
   font-weight: bold;
   padding: 8px 16px;
@@ -51,7 +57,7 @@ p {
   font-size: 18px;
   font-weight: 300;
   line-height: 1.5;
-  color: #5b5b5b;
+  color:  #fff;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -60,19 +66,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  color: #212121;
+  color:  #fff;
   font-size: 2.8em;
   margin: 24px 0;
 }
 
 h2 {
-  color: #353535;
+  color:  #fff;
   font-size: 2.4em;
   font-weight: bold;
 }
 
 h3 {
-  color: #484848;
+  color:  #fff;
 }
 
 h3,
@@ -81,8 +87,8 @@ b, strong {
 }
 
 .custom-btn {
-  background: #eee;
-  color: #5b5b5b;
+  background: #fff;
+color:  #0c0c0d;
   font-weight: bold;
   border-radius: 50px;
   padding: 13px 29px;
@@ -181,8 +187,8 @@ b, strong {
   transform: translate(0, 0);
 }
 .navbar[class*="headroom--not-top"] {
-  background: #ffffff;
-  border-bottom: 1px solid #f0f0f0;
+  background: #0c0c0d;
+  border-bottom: 1px solid #ff0044;
   padding-top: 0;
   padding-bottom: 0;
 }
@@ -251,7 +257,7 @@ b, strong {
   bottom: 1px;
 }
 .navbar-toggler .navbar-toggler-icon {
-  background: #212121;
+  background: #fff;
   display: block;
   width: 100%;
   height: 2px;
@@ -286,37 +292,9 @@ b, strong {
   font-family: 'unicons';
   content: '\eb65';
   font-size: 30px;
-  color: #ffffff;
-}
-
-.dark-mode {
-  background: #0c0c0d;
-}
-.dark-mode .navbar-light .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.8);
-}
-.dark-mode .navbar-light .navbar-nav .nav-link:hover {
   color: #ff0044;
 }
-.dark-mode .navbar[class*="headroom--not-top"] {
-  background: #0c0c0d;
-  border-bottom: 1px solid #1f1f1f;
-}
-.dark-mode .small-text {
-  background: #0d0c15;
-  color: #ffffff;
-}
-.dark-mode .feature-card .uil,
-.dark-mode .navbar-light .navbar-brand,
-.dark-mode h1, .dark-mode h2, .dark-mode h3, .dark-mode h4, .dark-mode h5, .dark-mode h6,
-.dark-mode .color-mode {
-  color: #ffffff;
-}
-.dark-mode .owl-carousel .owl-nav button.owl-next,
-.dark-mode .owl-carousel .owl-nav button.owl-prev,
-.dark-mode .owl-carousel button.owl-dot {
-  color: #ffffff;
-}
+
 
 .timeline-wrapper {
   position: relative;
@@ -327,7 +305,7 @@ b, strong {
 }
 .timeline-wrapper:before {
   content: "";
-  background: #474559;
+  background: #ff0044;
   width: 3px;
   height: 100%;
   position: absolute;
@@ -335,7 +313,7 @@ b, strong {
 }
 
 .timeline-yr {
-  background: #474559;
+  background: #ff0044;
   border-radius: 100%;
   position: absolute;
   width: 75px;
@@ -344,11 +322,11 @@ b, strong {
   text-align: center;
 }
 .timeline-yr span {
-  color: #ffffff;
+  color:  #fff;
   font-size: 16px;
   font-weight: bold;
-  display: block;
   line-height: 75px;
+  background-color: #ff0044;
 }
 
 .timeline-info {
@@ -358,7 +336,7 @@ b, strong {
   margin-left: 6em;
 }
 .timeline-info small {
-  color: #474559;
+  color: #ff0044;
   font-size: 16px;
   font-weight: bold;
   display: inline-block;
@@ -446,7 +424,7 @@ b, strong {
 }
 
 .contact-info {
-  background: #474559;
+  background: #ff0044;
   border-radius: 0 0 3px 3px;
   position: relative;
   bottom: 8px;
