--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -187,6 +187,8 @@ color:  #0c0c0d;
   transform: translate(0, 0);
 }
 .navbar[class*="headroom--not-top"] {
+  color:  #fff;
+
   background: #0c0c0d;
   border-bottom: 1px solid #ff0044;
   padding-top: 0;
@@ -202,6 +204,7 @@ color:  #0c0c0d;
 }
 
 .nav-link {
+  color:  #fff;
   font-weight: bold;
   font-size: 16px;
   overflow: hidden;
@@ -217,7 +220,25 @@ color:  #0c0c0d;
   content: attr(data-hover);
   transform: translate3d(0, 0, 0);
 }
+.navbar-collapse{
+  color: #fff;
+  margin-right: 10em;
+}
+.nav-item:hover{
 
+  color: #ff0044;
+
+}
+.nav-item span {
+
+  color: #fff;
+
+}
+.nav-item span:hover {
+
+  color: #ff0044;
+
+}
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
   color: #ff0044;
@@ -386,7 +407,7 @@ color:  #0c0c0d;
   height: 8px;
 }
 .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-  background: #5b5b5b;
+  background: #0c0c0d;
 }
 
 .google-map iframe {
@@ -485,7 +506,7 @@ color:  #0c0c0d;
   }
 
   .navbar-collapse {
-    background: #ffffff;
+    background: #555555;
     text-align: center;
     padding-bottom: 20px;
   }
